--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Online - Home</title>
+        <style>
+        .button{
+            width: 100px;
+            height: 40px;
+            border-radius: 50px;
+            background-color: green;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
+            <a href="https://mpago.la/13WgDyU"><button class="button">compra</button></a>
     <h1>Loja Online</h1>
     
     <div id="produtos">
