--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-            <a href="https://mpago.la/13WgDyU"><button class="button">compra</button></a>
+            <a href="https://mpago.la/111SsYw"><button class="button">compra</button></a>
     <h1>Loja Online</h1>
     
     <div id="produtos">
