--- a/public/index.html
+++ b/public/index.html
@@ -338,42 +338,42 @@
 
         <div class="products-grid">
             <div class="product-card">
-                <div class="product-image"><img src="imgs/Console PlayStation® 5 Slim.webp" alt=""></div>
+                <div class="product-image"><img src="img/Console PlayStation® 5 Slim.webp" alt=""></div>
                 <div class="product-description">PlayStation 5 Slim Edição Digital 2024 1TB - 1 Controle Branco Sony com 2 Jogos</div>
                 <div class="product-price">R$ 2.999,00</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/Sony PlayStation 4 Pro.webp" alt=""></div>
+                <div class="product-image"><img src="img/Sony PlayStation 4 Pro.webp" alt=""></div>
                 <div class="product-description">Console Playstation 4 Pro Modelo Ps4 1tb 4k</div>
                 <div class="product-price">R$ 2.199,00</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/Microfone pc 2.webp" alt=""></div>
+                <div class="product-image"><img src="img/Microfone pc 2.webp" alt=""></div>
                 <div class="product-description">Microfone USB Profissional para streaming e podcasts com cancelamento de ruído</div>
                 <div class="product-price">R$ 199,00</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/kit memoria ram ddr5 2.webp" alt=""></div>
+                <div class="product-image"><img src="img/kit memoria ram ddr5 2.webp" alt=""></div>
                 <div class="product-description">Memória DDR5 Kingston FURY Beast, 16GB (2x8GB), 5600MHz, Black, KF556C40BBK2-16</div>
                 <div class="product-price">R$ 454,90</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/Monitor Gamer LG UltraGear 24”.webp" alt=""></div>
+                <div class="product-image"><img src="img/Monitor Gamer LG UltraGear 24”.webp" alt=""></div>
                 <div class="product-description">LG UltraGear 24GS60F-B monitor gamer Full HD 180Hz 1ms color Preto</div>
                 <div class="product-price">R$ 884,00</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/MSI GeForce RTX 3050.webp" alt=""></div>
+                <div class="product-image"><img src="img/MSI GeForce RTX 3050.webp" alt=""></div>
                 <div class="product-description">Placa de vídeo Msi Geforce Rtx 3050 Ventus 2x 6g Oc</div>
                 <div class="product-price">R$ 1.450</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
@@ -387,14 +387,14 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/Kit Gamer RGB.webp" alt=""></div>
+                <div class="product-image"><img src="img/Kit Gamer RGB.webp" alt=""></div>
                 <div class="product-description">Combo Gamer 4x1 Teclado Mouse Headset Mousepad Strong Tech Mouse Preto Teclado Preto</div>
                 <div class="product-price">R$ 149,00</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/notebook-gamer.jpg" alt=""></div>
+                <div class="product-image"><img src="img/notebook-gamer.jpg" alt=""></div>
                 <div class="product-description">Notebook Acer Nitro V15 ANV15-51-58AZ 13ª Geração Intel Core i5-13420H, 8GB RAM, 512GB SSD, NVIDIA RTX 3050, 15.6" FHD LED IPS 144Hz, Windows 11, Preto, Retroiluminado</div>
                 <div class="product-price">R$ 4.625,04</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
