--- a/public/index.html
+++ b/public/index.html
@@ -380,7 +380,7 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image"><img src="imgs/SSD Kingston 1TB Nv3 1.webp" alt=""></div>
+                <div class="product-image"><img src="img/SSD Kingston 1TB Nv3 1.webp" alt=""></div>
                 <div class="product-description">SSD Kingston NV3, 1 TB, M.2 2280, PCIe 4.0 x4, NVMe, Leitura: 6000 MB/s, Gravação: 4000 MB/s, Azul - SNV3S/1000G</div>
                 <div class="product-price">R$ 399,99</div>
                 <a href="https://mpago.la/2u7A3fh" target="_blank" rel="noopener noreferrer"><button class="add-to-cart">Adicionar ao Carrinho</button></a>
